# mangomelt-webapp

./: README.md
.github/workflows/: api-ci.yml  web-ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/core/: auth.py  settings.py
apps/api/app/db/: init.py
apps/api/app/models/: event.py  user.py  workshop.py
apps/api/app/routers/: auth.py  checkout.py  events.py  webhooks.py  workshops.py
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/pages/: Events.tsx  Home.tsx  Pricing.tsx  Workshops.tsx
apps/web/src/shell/: AppShell.tsx
infra/: docker-compose.yml
